--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,9 +2,14 @@
 @tailwind components;
 @tailwind utilities;
 
-
 @layer base {
 html {
     scroll-behavior: smooth;
 }
+}
+
+@layer components {
+    .brand-gradient {
+        @apply box-decoration-clone bg-gradient-to-r from-[#FF1CF7] to-[#b249f8];
+    }
 }
